Use Java 21 as the JDK
Fix Locale, URL and Package deprecations